--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,28 @@
     <link href="./index.css">
     <title>Leaderboard</title>
 </head>
+
 <body>
-    Hello World
+    <div class="container">
+        <div>
+            <h1>Leaderboard</h1>
+            <div class="layout">
+                <div class="left">
+                    <div class="heading">
+                        <h2>Recent Scores</h2>
+                        <button id="refresh">Refresh</button>
+                    </div>
+                    <!-- table -->
+                </div>
+                <div class="right">
+                    <h2>Add your score</h2>
+                    <input required id="name" type="text" placeholder="Your Name"><br>
+                    <input required id="score" type="text" placeholder="Your Score"><br>
+                    <button id="submit">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
