fixed number input

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                 <div class="right">
                     <h2>Add your score</h2>
                     <input required id="name" type="text" placeholder="Your Name"><br>
-                    <input required id="score" type="number" placeholder="Your Score"><br>
+                    <input required id="score" type="number" min="0" max="100" placeholder="Your Score"><br>
                     <button id="submit">Submit</button>
                 </div>
             </div>
