--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <div>
+        <div class="container-div">
             <h1>Leaderboard</h1>
             <div class="layout">
                 <div class="left">
