first draft color pick

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                     </div>
                     <!-- table -->
                 </div>
-                <div class="right">
+                <div class="form">
                     <h2>Add your score</h2>
                     <input required id="name" type="text" placeholder="Your Name"><br>
                     <input required id="score" type="number" placeholder="Your Score"><br>
